--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,33 +1,45 @@
 include_directories(${PROJECT_INCLUDE_DIR})
 
+
+
+
+
+# add the automatically determined parts of the RPATH
+# which point to directories outside the build tree to the install RPATH
+#SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
+
+
+# the RPATH to be used when installing, but only if it's not a system directory
+#SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib:'$ORIGIN/lib'")
+
 file(GLOB HEADERS ${PROJECT_INCLUDE_DIR} *.h)
 file(GLOB SOURCES . *.cpp ${PROJECT_INCLUDE_DIR}/gravity/*.h)
 
-if (NOT ENABLE_IPOPT)
+if (NOT Ipopt)
   list(REMOVE_ITEM SOURCES ${PROJECT_SOURCE_DIR}/src/IpoptProgram.cpp)
 endif()
-if (NOT ENABLE_BONMIN)
+if (NOT Bonmin)
   list(REMOVE_ITEM SOURCES ${PROJECT_SOURCE_DIR}/src/BonminProgram.cpp)
 endif()
-if (NOT ENABLE_GUROBI)
+if (NOT Gurobi)
   list(REMOVE_ITEM SOURCES ${PROJECT_SOURCE_DIR}/src/GurobiProgram.cpp)
 endif()
 
-if (NOT ENABLE_CPLEX)
+if (NOT Cplex)
     list(REMOVE_ITEM SOURCES ${PROJECT_SOURCE_DIR}/src/CplexProgram.cpp)
 endif()
 
-if (NOT ENABLE_SDPA)
+if (NOT Sdpa)
     list(REMOVE_ITEM SOURCES ${PROJECT_SOURCE_DIR}/src/SdpaProgram.cpp)
 endif()
 
-if (NOT ENABLE_MOSEK)
+if (NOT Mosek)
     list(REMOVE_ITEM SOURCES ${PROJECT_SOURCE_DIR}/src/MosekProgram.cpp)
 endif()
 
-set(ARMADILLO_LIBRARIES armadillo)
 set(CPP_OPTION_PARSER option_parser)
 
-add_library(gravity ${SOURCES} ${HEADERS})
-target_link_libraries(gravity ${CPLEX_LIBRARIES} ${GUROBI_LIBRARIES} ${IPOPT_LIBRARIES} ${BONMIN_LIBRARIES} ${SDPA_LIBRARIES} ${MOSEK_LIBRARIES} ${XLNT_LIBRARIES} ${ARMADILLO_LIBRARIES} ${CPP_OPTION_PARSER})
+add_library(gravity STATIC ${SOURCES} ${HEADERS})
+target_link_libraries(gravity ${CPLEX_LIBRARIES} ${GUROBI_LIBRARIES} ${IPOPT_LIBRARIES} ${BONMIN_LIBRARIES} ${SDPA_LIBRARIES} ${MOSEK_LIBRARIES} ${XLNT_LIBRARIES} ${CPP_OPTION_PARSER})
+
 
