--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ os:
 - linux
 before_install:
 - sudo apt-get install gfortran
-sudo apt-get install gcc-6 g++-6
-export CC=/usr/bin/gcc-6  
-export CXX=/usr/bin/g++-6
+- sudo apt-get install gcc-6 g++-6
+- export CC=/usr/bin/gcc-6  
+- export CXX=/usr/bin/g++-6
 - echo $LANG
 - echo $LC_ALL
 - cd ./ext_lib/xlnt-1.3.0
