--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ compiler:
 os:
 - linux
 before_install:
+- sudo add-apt-repository ppa:ubuntu-toolchain-r/test
+- sudo apt update
+- sudo apt-get upgrade
 - sudo apt-get install gfortran
 - sudo apt-get install gcc-6 g++-6
 - export CC=/usr/bin/gcc-6  
