--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ os:
 - linux
 before_install:
 - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
-- sudo apt update -q
+- sudo apt update
 - sudo apt-get upgrade
 - sudo apt-get install gfortran
 - sudo apt-get install gcc-6 g++-6 -y
