--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ before_install:
 - sudo apt-get install gfortran
 - export CC=/usr/bin/gcc-6  
 - export CXX=/usr/bin/g++-6
+- sudo apt-get install coinor-libipopt-dev
 - echo $LANG
 - echo $LC_ALL
 - cd ./ext_lib/xlnt-1.3.0
