--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ addons:
    - g++-6
 before_install:
 - sudo apt-get install gfortran
+- sudo apt-get install libgfortran3
 - export CC=/usr/bin/gcc-6  
 - export CXX=/usr/bin/g++-6
 - echo $LANG
