--- a/.travis.yml
+++ b/.travis.yml
@@ -10,13 +10,22 @@ addons:
   sources:
    - ubuntu-toolchain-r-test
   packages:
-   - gcc-7
-   - g++-7
+   - gcc-6
+   - g++-6
 before_install:
-- sudo apt-get install gfortran
-- sudo apt-get install libgfortran4
-- export CC=/usr/bin/gcc-7  
-- export CXX=/usr/bin/g++-7
+- export CC=/usr/bin/gcc-6
+- export CXX=/usr/bin/g++-6
+- sudo apt-get install build-essential gfortran pkg-config liblapack-dev libblas-dev
+- wget https://www.coin-or.org/download/source/Ipopt/Ipopt-3.12.8.tgz
+- tar xvzf Ipopt-3.12.8.tgz
+- cd Ipopt-3.12.8/
+- cd ThirdParty/Mumps
+- ./get.Mumps
+- cd ../..
+- ./configure
+- make -j5
+- make install
+- cd ../
 - echo $LANG
 - echo $LC_ALL
 - cd ./ext_lib/xlnt-1.3.0
