--- a/.travis.yml
+++ b/.travis.yml
@@ -57,7 +57,7 @@ after_success:
 - docker login -u $DOCKER_USER -p $DOCKER_PASS
 - export REPO=hhijazi01/odo
 - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi`
-- docker build -f Dockerfile -t $REPO:$COMMIT .
+- docker build -f ./ODO/Dockerfile -t $REPO:$COMMIT .
 - docker tag $REPO:$COMMIT $REPO:$TAG
 - docker tag $REPO:$COMMIT $REPO:travis-$TRAVIS_BUILD_NUMBER
 - docker push $REPO
