fixing docker link xlnt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,7 +72,6 @@ endif()
 # Include cpp_option_parser
 include_directories(${PROJECT_SOURCE_DIR}/ext_lib/cpp_option_parser)
 add_subdirectory(ext_lib/cpp_option_parser)
-set(LIBS ${LIBS} option_parser)
 # Include rapidjson
 include_directories(${PROJECT_SOURCE_DIR}/ext_lib/rapidjson-1.1.0/include)
 # Include Power dirs
@@ -91,7 +90,7 @@ set(PROJECT_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
 set(CMAKE_BUILD_TYPE "Release")
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -lpthread")
-set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-rpath,'\$ORIGIN/ext_lib/Ipopt/lib'")
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-rpath,'\$ORIGIN/lib'")
 add_subdirectory(src)
 add_subdirectory(examples)
 
