--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ before_install:
 - export CC=/usr/bin/gcc-6
 - export CXX=/usr/bin/g++-6
 - sudo apt-get install build-essential gfortran pkg-config liblapack-dev libblas-dev
-- wget --no-check-certificate https://www.coin-or.org/download/source/Ipopt/Ipopt-3.12.12.tgz
+- wget --tries=40 --retry-connrefused --waitretry=1 --no-check-certificate https://www.coin-or.org/download/source/Ipopt/Ipopt-3.12.12.tgz
 - tar xvzf Ipopt-3.12.12.tgz
 - cd Ipopt-3.12.12/
 - cd ThirdParty/Mumps
