--- a/ext_lib/cpp_option_parser/CMakeLists.txt
+++ b/ext_lib/cpp_option_parser/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_executable (option_parser_main main.cpp optionParser.cpp optionParser.hpp)
-add_library (option_parser optionParser.cpp optionParser.hpp)
+add_library (option_parser SHARED optionParser.cpp optionParser.hpp)
 
 set_target_properties(option_parser PROPERTIES CXX_STANDARD 11)
 set_target_properties(option_parser PROPERTIES CXX_STANDARD_REQUIRED ON)
